Bug 475691 - Both Katepart and katexmltools have same default keybinding
Summary: Both Katepart and katexmltools have same default keybinding
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: application (other bugs)
Version First Reported In: 23.08.1
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-10-16 11:27 UTC by Henri K
Modified: 2025-02-03 20:24 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Henri K 2023-10-16 11:27:32 UTC
Two actions have same default keybinding: Ctrl+Return. Actions are Katepart: "Insert non-intended newline" and katexmltools: "Insert Element..."

STEPS TO REPRODUCE
1. Enable XML Completion plugin
2. In keybinding configuration search for: Ctrl+Return

OBSERVED RESULT

Same keybinding

EXPECTED RESULT

Should be different

SOFTWARE/OS VERSIONS
Operating System: Fedora Linux 38
KDE Plasma Version: 5.27.8
KDE Frameworks Version: 5.110.0
Qt Version: 5.15.10
Graphics Platform: Wayland
Comment 1 Henri K 2023-10-16 11:51:15 UTC
About what the change could be.  I guess changing katexmltools' keybinding is more practical. Its keybinding for closing tag is "Ctrl + <". One option for inserting a new tag could be "Ctrl + >" (which in my keyboard layout is same as typing "Ctrl + Shift + <"), which atleast for me isn't preserved by Plasma, Kwin etc.
Comment 2 Christoph Cullmann 2024-09-13 19:32:54 UTC
Git commit 4aba3275c2e89120d7a7172f810901db6b49bde5 by Christoph Cullmann.
Committed on 13/09/2024 at 19:32.
Pushed by cullmann into branch 'master'.

avoid shortcut clash

M  +2    -3    addons/xmltools/plugin_katexmltools.cpp

https://invent.kde.org/utilities/kate/-/commit/4aba3275c2e89120d7a7172f810901db6b49bde5
Comment 3 Christoph Cullmann 2024-09-13 19:33:08 UTC
Good catch!
Comment 4 Peter Ped Helcmanovsky 2024-12-25 11:38:19 UTC
The Ctrl+< does clash on my EN notebook keyboard with Ctrl+Shift+, (Configure Kate)
And Ctrl+> similarly does clash with Ctrl+Shift+. (Focus Navigation Bar)

I don't really mind the second one (I use it very very rarely with mouse, wouldn't ever recall the shortcut anyway), but clashing with Kate configure feels to me a bit too "unpolished UX" when encountered by user.

IIRC I had to select the XML plugin myself after installation, so at least it's not a clash happening by default after just installing Kate. Maybe the suggestion was done by user having keyboard layout where "< ," "> ." keys does not exist? But AFAIK that's default EN layout, so I think the current default is unfortunate.

Sadly I have no better suggestion, the Kate shortcuts seems to be pretty extensive already, I personally wouldn't even mind having the katexmltools without default shortcuts in this case (I think the config shortcut is pretty standard across several KDE apps, so that's probably going to stay?).

Reopening this bug instead of reporting it as new, sorry if this is not the best approach.
Comment 5 Christoph Cullmann 2025-02-03 20:21:37 UTC
I think then the best solution to just remove them ATM, users can set own ones.
Comment 6 Christoph Cullmann 2025-02-03 20:24:22 UTC
Git commit 72f4f8222288f4bfaa6c1cc382cdef154ed7bf1f by Christoph Cullmann.
Committed on 03/02/2025 at 20:24.
Pushed by cullmann into branch 'master'.

avoid shortcut clashes

better just let users set that themself than non working
defaults

M  +0    -2    addons/xmltools/plugin_katexmltools.cpp

https://invent.kde.org/utilities/kate/-/commit/72f4f8222288f4bfaa6c1cc382cdef154ed7bf1f