avoid shortcut clash

BUG: 475691